<resources>
    <string name="app_name">Insta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_title_txt">Upload your avatar</string>
    <string name="register_btn">Register</string>
    <string name="confirm_password_edt">Confirm Password</string>
    <string name="password_edt">Password</string>
    <string name="email_edt">Email</string>
    <string name="fullname_edt">Full Name</string>
    <string name="upload_post_txt">Upload your post or video</string>
    <string name="create_post_btn">Create a post</string>
    <string name="login_btn">Login</string>
    <string name="register_txt">Create New Account</string>
    <string name="please_enter_your_details">Please enter your details</string>
    <string name="logo">logo</string>
    <string name="profile_pic">profile pic</string>
    <string name="_0">0</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="edit_profile">Edit profile</string>
</resources>